2014-08-02  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/estado_monitores.php: Fixed that module data
	display does not work correctly when time range mode is selected
	and paginated.

2014-08-02  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/estado_agente.php: Fixed sql error.

2014-08-01  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.editor.php: fixed the acl.
	
	MERGED FROM THE BRANCH 5.0

2014-07-31  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php, include/functions_graph.php,
	include/db/postgresql.php, include/db/oracle.php,
	include/functions_api.php, extensions/agents_alerts.php,
	operation/search_main.php, operation/search_agents.getdata.php,
	operation/agentes/status_monitor.php,
	operation/agentes/networkmap.topology.php,
	operation/agentes/ver_agente.php,
	operation/search_modules.getdata.php, operation/search_results.php,
	operation/events/events_list.php,
	godmode/alerts/alert_list.builder.php,
	godmode/alerts/configure_alert_template.php,
	godmode/modules/manage_network_components_form.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/map_builder.php: tiny fixes for the improve the
	support of postgreSQL databases.

2014-07-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/ajax/module.php: tiny fixes for the improve the support of
	postgreSQL databases.

2014-07-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php,
	include/functions_treeview.php, include/ajax/module.php,
	include/functions_reporting.php, include/db/postgresql.php,
	include/functions_servers.php, operation/agentes/estado_agente.php,
	operation/tree.php: tiny fixes for the improve
	the support of postgreSQL databases.

2014-07-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reporting.php,