@@ -1,3 +1,10 @@
+2014-08-03  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/functions_ui.php: Fixed that the fast forward and the going
+	to the last of pagination doesn't work in the modal window for module
+	data display.
+	And fixed incorrect offset calculation for the fast forward.
+
 2014-08-02  Junichi Satoh  <junichi@rworks.jp>
 
 	* operation/agentes/estado_monitores.php: Fixed that module data
